--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container align-center">
       <select class="form-select form-select-lg mb-3 city-input" name="" id="">
         <option selected value="Copenhagen">Copenhagen</option>
-        <option value="Arad">Arad</option>
+        <option value="Honolulu">Honolulu</option>
         <option value="London">London</option>
         <option value="Cluj">Cluj</option>
         <option value="Moskova">Moskova</option>
