--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   </head>
   <body>
     <div class="container align-center">
-      <select class="form-select form-select-lg mb-3 city-input" name="" id="">
-        <option selected value="Copenhagen">Copenhagen</option>
+      <input class="form-input form-input-sm  mb-3 city-input" name="" id="">
+        <!-- <option selected value="Copenhagen">Copenhagen</option>
         <option value="Honolulu">Honolulu</option>
         <option value="London">London</option>
         <option value="Cluj">Cluj</option>
-        <option value="Moskova">Moskova</option>
-      </select>
+        <option value="Moskova">Moskova</option> -->
+    </input>
       <h1 class="city"></h1>
       <h2>
         <span class="temperature"></span>
