--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Weather app</title>
   </head>
   <body>
     <div class="container align-center">
