--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Weather app</title>
   </head>
   <body>
-    <div class="container align-center">
+    <div class="container ">
       <input class="form-input form-input-sm  mb-3 city-input" name="" id="">
         <!-- <option selected value="Copenhagen">Copenhagen</option>
         <option value="Honolulu">Honolulu</option>
@@ -30,7 +30,8 @@
         <option value="Cluj">Cluj</option>
         <option value="Moskova">Moskova</option> -->
     </input>
-      <h1 class="city"></h1>
+      <div class="all-items">
+        <h1 class="city"></h1>
       <h2>
         <span class="temperature"></span>
       </h2>
@@ -42,6 +43,7 @@
       <p>Feels like <span class="temp-feel"></span> C</p>
       <p>Wind <span class="wind"></span>m/s</p>
       <p>Humidity <span class="humidity"></span>%</p>
+      </div>
     </div>
 
     <script src="script.js"></script>
